--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon server/index.js"
+    "start": "node server/index.js"
   },
   "dependencies": {
     "express": "4.17.1",
@@ -14,7 +14,6 @@
   },
   "devDependencies": {
     "eslint": "^7.14.0",
-    "eslint-config-google": "^0.14.0",
     "nodemon": "1.18.4"
   },
   "engines": {
