--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "dev" : "nodemon server/index.js"
+    "start": "webpack & node server/index.js",
+    "dev": "webpack & nodemon server/index.js",
+    "eslint": "eslint **/*.js",
+    "build":"webpack"
   },
   "dependencies": {
     "express": "4.17.1",
@@ -14,11 +16,22 @@
     "ws": "7.3.1"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.0.1",
     "eslint": "^7.14.0",
-    "nodemon": "1.18.4"
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "nodemon": "1.18.4",
+    "prettier": "^2.2.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.9.0",
+    "webpack-bundle-analyzer": "^4.2.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "engines": {
-    "node":"12.19.0"
+    "node": "12.19.0"
   },
   "keywords": []
 }
