--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "webpack & node server/index.js",
     "dev": "webpack & nodemon server/index.js",
     "eslint": "eslint **/*.js",
-    "build":"webpack"
+    "build":"webpack",
+    "serve": "webpack serve"
   },
   "dependencies": {
     "express": "4.17.1",
