--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "webpack & node server/index.js",
     "dev": "webpack & nodemon server/index.js",
     "eslint": "eslint **/*.js",
-    "build":"webpack",
+    "build": "webpack",
     "serve": "webpack serve"
   },
   "dependencies": {
     "express": "4.17.1",
+    "ini": "^2.0.0",
     "msgpack-lite": "^0.1.26",
     "node-uuid": "1.4.8",
     "ws": "7.3.1"
@@ -19,15 +20,15 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.1",
-    "eslint": "^7.14.0",
+    "eslint": "^7.16.0",
     "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-prettier": "^3.3.0",
     "html-webpack-plugin": "^4.5.0",
     "nodemon": "1.18.4",
     "prettier": "^2.2.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.9.0",
-    "webpack-bundle-analyzer": "^4.2.0",
+    "webpack": "^5.11.0",
+    "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
   },
