--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack & node server/index.js",
     "dev": "webpack & nodemon server/index.js",
     "heroku-prebuild": "npm install --dev",
+    "heroku-prestart": "npm install --dev",
     "eslint": "eslint **/*.js",
     "build": "webpack",
     "serve": "webpack serve"
