--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack & node server/index.js",
-    "dev": "webpack & nodemon server/index.js",
+    "start": "webpack && node server/index.js",
+    "dev": "webpack && nodemon server/index.js",
     "heroku-prebuild": "npm install --dev",
     "heroku-prestart": "npm install --dev",
     "eslint": "eslint **/*.js",
@@ -29,7 +29,7 @@
     "nodemon": "1.18.4",
     "prettier": "^2.2.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.11.0",
+    "webpack": "^5.21.2",
     "webpack-bundle-analyzer": "^4.3.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
