--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "npm ci && webpack && node server/index.js",
+    "start": "npm install --dev && webpack && node server/index.js",
     "dev": "webpack && nodemon server/index.js",
     "heroku-prebuild": "npm install --dev",
     "heroku-prestart": "npm install --dev",
